release 1.0.3 (2009-03/04)
- Fixed issues 257 & 259
  https://jersey.dev.java.net/issues/show_bug.cgi?id=257
  https://jersey.dev.java.net/issues/show_bug.cgi?id=259
  added null value checks to UriBuilder.replaceQueryParam and
  UriTemplate.createURIComponent (used when building uri from a map)
- Resource filters can be utilized with implicit views. Annotations
  on the class will be utilized as annotations of the AbtractMethod, specifically
  the concrete class com.sun.jersey.api.model.AbstractImplicitViewMethod.
- Ensure that when @ImplicitProduces is utilized that the most acceptable
  media type is set as the content type when an implicit view is returned.
- Fixed issue 254
  https://jersey.dev.java.net/issues/show_bug.cgi?id=254
  Some implementations of javax.naming.InitialContext return null while
  others throw a NamingException, if threre is no Object associated with
  a name when looking up an object.
- Fixed issue 251
  https://jersey.dev.java.net/issues/show_bug.cgi?id=251
  The set of methods on the Allow header is accessible using
  ClientResponse.getAllow.
- Fixed issue 230
  https://jersey.dev.java.net/issues/show_bug.cgi?id=230
  No-interface view session beans deployed in the war may also be resource
  and provided classes. Injection of Jersey/JAX-RS artifacts on to fields and
  setters will work correctly.
- Fixed issue 239
  https://jersey.dev.java.net/issues/show_bug.cgi?id=239
  @Path("/") annotated resource methods are equivalent to if the @Path is not
  present.
- Support for EJB 3.1 no-interface view beans as resource or provider class
  instances deployed into the war.
  This requires Glassfish V3 build 43, from the 30th of March, or greater.
- Fixed issue 246
  https://jersey.dev.java.net/issues/show_bug.cgi?id=246
  Imran M Yousuf contributed support for file attachments for the jersey-multipart
  module.
  See the class
    com.sun.jersey.multipart.file.FileDataBodyPart
- Fixed issue 225