@@ -1,4 +1,11 @@
 release 1.0.3 (2009-03/04)
+- Fixed issue 245
+  https://jersey.dev.java.net/issues/show_bug.cgi?id=245
+  When the Apache Adbera Java types are utilized with the jersey-atom-abdera 
+  module and the client API it is ensured that parsing of the types is completed
+  before the type is returned to the user (because the input stream
+  is closed before the type is returned to the user it is necessary to
+  the complete parsing before the input stream is closed).
 - Fixed issues 257 & 259
   https://jersey.dev.java.net/issues/show_bug.cgi?id=257
   https://jersey.dev.java.net/issues/show_bug.cgi?id=259
